force-app/main/default/objects/df_122_penninglegat__c/df_122_penninglegat__c.object-meta.xml
<CustomObject>
    <label>Penninglegat</label>
    <nameField>
        <label>Penninglegat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Penninglegats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>