force-app/main/default/objects/df_122_penninglegat__c/fields/journal_se_new__c.field-meta.xml
<CustomField>
    <fullName>journal_se_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>journal_se_new</label>
    <referenceTo>df_journal_se_new__c</referenceTo>
    <relationshipLabel>Penninglegat</relationshipLabel>
    <relationshipName>df_122_penninglegat</relationshipName>
    <type>Lookup</type>
</CustomField>