force-app/main/default/objects/df_122_penninglegat__c/fields/legatbelopp__c.field-meta.xml
<CustomField>
    <fullName>legatbelopp__c</fullName>
    <label>Legatbelopp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>