force-app/main/default/objects/df_122_penninglegat__c/fields/legatmottagerens_efternamn__c.field-meta.xml
<CustomField>
    <fullName>legatmottagerens_efternamn__c</fullName>
    <label>Legatmottagerens efternamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>