force-app/main/default/objects/df_122_penninglegat__c/fields/legatmottagerens_frnamn_penningl_258__c.field-meta.xml
<CustomField>
    <fullName>legatmottagerens_frnamn_penningl_258__c</fullName>
    <label>Legatmottagerens förnamn d5334</label>
    <length>255</length>
    <type>Text</type>
</CustomField>