force-app/main/default/objects/df_122_penninglegat__c/fields/legatmottagerens_personnummer_pe_259__c.field-meta.xml
<CustomField>
    <fullName>legatmottagerens_personnummer_pe_259__c</fullName>
    <label>Legatmottagerens personnummer b2159</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>