force-app/main/default/objects/df_122_penninglegat__c/fields/r_penninglegatet_personligt__c.field-meta.xml
<CustomField>
    <fullName>r_penninglegatet_personligt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Är penninglegatet personligt</label>
    <type>Checkbox</type>
</CustomField>