force-app/main/default/objects/df_122_penninglegat__c/fields/ytterligare_legatinformation_pen_260__c.field-meta.xml
<CustomField>
    <fullName>ytterligare_legatinformation_pen_260__c</fullName>
    <label>Ytterligare legat-information 93d99</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>